RAIN-3191 : PT Report download button overlap issue

--- a/web/rainmaker/packages/employee/src/modules/employee/reports/index.scss
+++ b/web/rainmaker/packages/employee/src/modules/employee/reports/index.scss
@@ -111,3 +111,8 @@
     overflow: scroll;
   }
 }
+
+
+.dt-button-collection{
+  margin-top: 2%;
+}
